# orange3-volcanoes

./: .readthedocs.yaml  README.md  README.rst  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
Example_input_files/: AmpLiquids.csv  Cpx-Opx.csv  Kspar_Liq.csv  Liq_Ol_Example.csv  Liq_Ol_Example_CLEAN.csv  Opx_Liq_Example.csv  Plag_Liq.csv  TwoFeldspar.csv  ol_spinel.csv
Icon_Illustration_Files/: Cpx_Barometer_icon.afdesign  Cpx_Opx_Barometer.afdesign  Cpx_Opx_Thermometer.afdesign  Opx_Barometer_icon.afdesign  Opx_Thermometer_icon.afdesign  Thermobaromtry.afdesign
OrangeVolcanoes/: GeneralThermoWidget.py  OWCoDATransformations.py  OWCpxBarometer.py  OWCpxThermometer.py  OWDataCleaning.py  OWDatasets.py  OWFiltering.py  OWLiqThermometer.py  OWOpxBarometer.py  OWOpxCpxBarometry.py  OWOpxThermometer.py
OrangeVolcanoes/datasets/: Agreda-Lopez_2024.xlsx  Georoc_Cpx_Selected.xlsx  Pawlowsky-Glahn_and_Egozcue_2006.xlsx  Petrelli_et_al_2020__Test_Dataset.xlsx  Petrelli_et_al_2020__Train_Dataset.xlsx  Smith_et_al_2011.xlsx  Smith_glass_post-NYT_1.xlsx  Smith_glass_post-NYT_2.xlsx
OrangeVolcanoes/icons/: Viscosity.afdesign
OrangeVolcanoes/utils/: dataManipulation.py
Volcanoes.egg-info/: PKG-INFO  SOURCES.txt
docs/source/: coda_geochemistry.rst  coda_transformations.rst  conf.py  cpx_barometer.rst  cpx_thermometer.rst  data_cleaning.rst  datasets.rst  importing_data.rst  index.rst  installing.rst  introduction.rst  liq_thermometer.rst  tephra_classification.rst  (+1 more)
orange3_volcanoes.egg-info/: PKG-INFO  requires.txt
utils/: dataManipulation.py
